<resources>
    <string name="app_name">ReactionTime</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_drawer_games">Games</string>
    <string name="nav_drawer_ranking">Rankings</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_aboutus">About</string>
    <string name="nav_drawer_historic">Historic</string>
    <string name="nav_drawer_subtitle">Other</string>
    <string name="nav_drawer_instructions">Instructions</string>
    <string name="spinner_txt_rounds">Number of rounds</string>
    <string name="spinner_txt_balls">Number of balls</string>
    <string name="game_btn_txt">Start</string>
    <string name="game_txt_remaining_balls">Remaining brains:</string>
    <string name="game_txt_remaining_rounds">Remaining rounds:</string>
    <string name="gplay_error">Error</string>
    <string name="action_share">Share</string>
    <string name="share1">This is your score:</string>
    <string name="extra_subject">Reaction Time. Score</string>

</resources>
