<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_drawer_games" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawer_ranking" />
        <item
            android:id="@+id/nav_historic"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_drawer_historic" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/nav_drawer_subtitle">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_drawer_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_aboutus" />
        </menu>
    </item>

</menu>
